# newspaper-scraper

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg
newspaper-scraper/: logger.py  spiegel.py
newspaper_scraper/: __init__.py  constants.py  database.py  scraper.py  settings.py
newspaper_scraper/sites/: bild.py  handelsblatt.py  spiegel.py  sueddeutsche.py  tagesspiegel.py  welt.py  zeit.py
newspaper_scraper/utils/: logger.py  utils.py
