# pyproject.toml

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "newspaper_scraper"
version = "0.1.3"
description = "The all-in-one Python package for seamless newspaper article indexing, scraping, and processing – supports public and premium content!"
authors = [{ name = "Lukas Trippe", email = "lkstrp@pm.me" }]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["newspaper", "article", "scraper", "index", "process", "nlp", "wrapper"]
dependencies = [
    "pandas",
    "selenium",
    "beautifulsoup4",
    "goose3 ==3.1.11",
    "tqdm",

]
requires-python = ">=3.8"

[project.optional-dependencies]
nlp = ["spacy"]

[project.urls]
Homepage = "https://github.com/lkstrp/newspaper-scraper"
